--- a/res/doc/实现原理.md
+++ b/res/doc/实现原理.md
@@ -1,1 +1,10 @@
 # 实现原理
+&emsp;&emsp;使用gopacket直接在网卡上拦截服务器或客户端所有请求消息,beego做网页展示统计。流程如下：
+![消息拦截流程](../img/消息拦截流程.png)
+
+
+
+
+### TCP协议
+&emsp;&emsp;示例代码使用如下TCP自定义协议。   
+`消息长度`(4B)+`消息ID`(4B)+`Ack`(4B)+`Seq`(4B)+`Protobuf消息体`
