--- a/res/doc/简介.md
+++ b/res/doc/简介.md
@@ -3,5 +3,6 @@
 因为每个项目TCP协议规范不一致，因此次项目不能直接使用，需要自行修改包封装逻辑和统计逻辑。
 
 - [本地运行](本地运行.md)
+- [Linux运行](Linux运行.md)
 - [Web使用](Web使用.md)
 - [实现原理](实现原理.md)
